fix: added selector for high contrast (refs SFKUI-7569)

--- a/packages/design/src/components/file-selector/_file-selector.scss
+++ b/packages/design/src/components/file-selector/_file-selector.scss
@@ -9,14 +9,19 @@
             @include focus-indicator;
         }
     }
+    label.button.button--tertiary {
+        @media (forced-colors: active) {
+            border-color: ButtonBorder;
+            color: ButtonText;
+        }
 
-    label {
         cursor: pointer;
     }
-
-    input:disabled + label {
-        background-color: transparent;
-        border-color: transparent;
-        cursor: default;
+    input[aria-disabled="true"] + label.button.button--tertiary {
+        @media (forced-colors: active) {
+            color: GrayText;
+            border-color: GrayText;
+            cursor: default;
+        }
     }
 }
